# tallerProteinas

./: CMakeLists.txt  README.md  aminoacido.c  aminoacido.h  buffer.c  buffer.h  cliente.c  cliente.h  codigo_genetico.c  codigo_genetico.h  codon.c  codon.h  main.c  servidor.c  servidor.h  socket.c  socket.h
src/: aminoacido.c  cliente.c  cliente.h  codon.c  main.c  servidor.c  servidor.h  socket.c  socket.h
